# knowledge-vault-pipeline

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
configs/: generic-openai.yaml  huberman.yaml  paridade-risco-investimentos.yaml  ui-generated.yaml  video-local-whisper.yaml  youtube-functional-medicine.yaml
docs/: COMMANDS.md
knowledge_vault_pipeline/: cli.py  config.py  env.py  models.py  pipeline.py  utils.py  youtube.py
knowledge_vault_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
knowledge_vault_pipeline/extractors/: __init__.py  audio.py  docx.py  image.py  pdf.py  text.py
knowledge_vault_pipeline/processors/: card_detector.py  category.py  link_validator.py  llm_extractor.py  normalizer_pt.py  note_generator.py  profiles.py  terminology.py
output/paridade-risco/vault-ready/02 - Conhecimentos/: Alavancagem operacional e lucro em recuperação.md  Alinhamento histórico entre Fed e Tesouro nos EUA.md  Ativos não correlacionados suavizam a carteira.md  Ativos pagam prêmio de risco no longo prazo.md  Ativos que tendem a funcionar em estagflação no Brasil.md  Ativos que tendem a funcionar no cenário de crescimento com inflação alta.md  Ativos que tendem a funcionar no cenário de crescimento com inflação baixa.md  Ativos que tendem a liderar no Cenário 1.md  Avaliação por janelas longas.md  Balanço de pagamentos ajuda a explicar a direção do câmbio.md  (+204 more)
tests/: test_audio_pipeline.py  test_card_detector.py  test_docx_extractor.py  test_generic_pipeline.py  test_llm_extractor.py  test_risk_parity_profile.py  test_youtube.py
(+31 files in other folders)
