[project]
name = "knowledge-vault-pipeline"
version = "0.1.0"
description = "Pipeline local para transformar documentos em uma base Obsidian vault-ready."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "pypdf>=5.0.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
audio-local = ["openai-whisper>=20250625"]
ocr = ["pytesseract>=0.3.13", "Pillow>=10.0.0"]
ui = ["streamlit>=1.40.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
kvp = "knowledge_vault_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["knowledge_vault_pipeline*"]
exclude = ["configs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
